--- a/assets/css/blogs.css
+++ b/assets/css/blogs.css
@@ -653,7 +653,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 4rem 2rem;
+  padding: 3rem 4rem 2rem;
   grid-column: 1 / -1;
 }
 
